...
                key: _formKey,
                child: Container(
                  padding: const EdgeInsets.symmetric(horizontal: 50.0),
                  child: Column(
                    children: <Widget>[
                      TextFormField( // email
                        key: const Key('SignInEmailFormField'),
                        decoration: formFieldDeco.copyWith(hintText: 'Email'),
                        style: chewyTextStyle.copyWith(fontSize: 18.0),
                        validator: (value) => value!.trim().isEmpty ? 'Enter your email' : null,
                        onChanged: (value) {
                          setState(() => _email = value.trim());
                        },
                      ),
                      gapBox,
                      TextFormField( // password
                        key: const Key('SignInPasswordFormField'),
                        decoration: formFieldDeco.copyWith(hintText: 'Password'),
                        style: chewyTextStyle.copyWith(fontSize: 18.0),
                        obscureText: true,
                        validator: (value) => value!.trim().isEmpty ? 'Enter your password' : null,
                        onChanged: (value) {
                          setState(() => _password = value.trim());
...
              gapBox,
              Container(
                width: 160,
                height: 55,
                decoration: largeRadiusRoundedBox,
                child: TextButton(
                  key: const Key('SignInLoginButton'),
                  style: TextButton.styleFrom(
                    padding: const EdgeInsets.all(5.0),
                    primary: Colors.white,
                    textStyle: chewyTextStyle.copyWith(fontSize: 27.5),
                  ),
                  child: const AutoSizeText('Login', maxLines: 1),
                  onPressed: () async {
                    if (_formKey.currentState!.validate()) {
                      CustomUser? result = await _authenticate.customSignIn(_email, _password);
                      if (result == null) {
                        setState(() => _error = 'Invalid email and / or password.');
                      } else {
                        setState(() => _loading = true);
                        Navigator.pop(context);
                      }
                    }
                  },
...
